--- a/app/src/main/res/layout/view_custom_colors.xml
+++ b/app/src/main/res/layout/view_custom_colors.xml
@@ -1,53 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/color_background"
-    app:cardCornerRadius="16dp"
-    app:cardElevation="190dp">
+    android:id="@+id/customColorsView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent">
 
-    <RelativeLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_margin="55dp"
+        app:cardBackgroundColor="@color/color_background"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="100dp">
 
-        <TextView
-            android:id="@+id/customColorTitleTextView"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="10dp"
-            android:text="Custom colors"
-            android:textColor="@color/colorPrimary"
-            android:textSize="22sp" />
+            android:layout_height="wrap_content">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/customColorsRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/customColorTitleTextView"
-            android:layout_margin="16dp"
-            tools:itemCount="3" />
+            <TextView
+                android:id="@+id/customColorTitleTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="10dp"
+                android:text="Custom colors"
+                android:textColor="@color/colorPrimary"
+                android:textSize="22sp" />
 
-        <TextView
-            android:id="@+id/addColorTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/customColorTitleTextView"
-            android:gravity="center"
-            android:text="Add your own colors!"
-            android:textColor="@color/text_gray"
-            android:textSize="18sp" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/customColorsRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/customColorTitleTextView"
+                android:layout_margin="16dp"
+                tools:itemCount="3" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/addNewColorButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/customColorsRecyclerView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="16dp"
-            android:text="Add new color" />
-    </RelativeLayout>
-</com.google.android.material.card.MaterialCardView>
+            <TextView
+                android:id="@+id/addColorTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/customColorTitleTextView"
+                android:gravity="center"
+                android:text="Add your own colors!"
+                android:textColor="@color/text_gray"
+                android:textSize="18sp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/addNewColorButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/customColorsRecyclerView"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="16dp"
+                android:text="Add new color" />
+        </RelativeLayout>
+    </com.google.android.material.card.MaterialCardView>
+</RelativeLayout>
