--- a/app/src/main/res/layout/view_custom_colors.xml
+++ b/app/src/main/res/layout/view_custom_colors.xml
@@ -5,7 +5,9 @@
     android:id="@+id/customColorsView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent">
+    android:background="@android:color/transparent"
+    android:clickable="true"
+    android:focusable="true">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
@@ -27,7 +29,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="10dp"
-                android:text="Custom colors"
+                android:text="@string/scr_rgb_settings_lbl_custom_colors"
                 android:textColor="@color/colorPrimary"
                 android:textSize="22sp" />
 
@@ -45,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/customColorTitleTextView"
                 android:gravity="center"
-                android:text="Add your own colors!"
+                android:text="@string/scr_rgb_settings_lbl_own_colors"
                 android:textColor="@color/text_gray"
                 android:textSize="18sp" />
 
@@ -56,7 +58,7 @@
                 android:layout_below="@+id/customColorsRecyclerView"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="16dp"
-                android:text="Add new color" />
+                android:text="@string/scr_rgb_settings_lbl_new_color" />
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
 </RelativeLayout>
